# atlas_cubeeye_driver

./: .gitignore  CLAUDE_CONTEXT.md  CMakeLists.txt  DEPTH_EXTRACTION_FORMULA.md  DS3D_INTEGRATION_DEBUG.md  FINAL_REPORT.md  GSTREAMER_DESIGN.md  PLAN.md  PROGRESS_REPORT_2025-01-03.md  RAW_FRAME_FORMAT.md  README.md  RESEARCH_REPORT_2026-01-06.md  REVERSE_ENGINEERING_REPORT.md  SDK_PIPELINE_ANALYSIS.md  SDK_REVERSE_ENGINEERING_FINDINGS.md  USB_VERIFICATION_REPORT.md  analyze_benchmark.py  analyze_hand_test.py  analyze_raw_format.py  analyze_ruler.py  analyze_subpixels.py  calibrate.py  calibrate_linear.py  capture.sh  capture_ruler.py  capture_usb.sh  data_structure_analysis.py  debug_calibration.py  decode_v4l2.py  deep_analysis.py  depth_extractor.py  depth_extractor_fast.py  derive_formula.py  poly_coeffs.json  prompt.txt  run_cubeeye_shell.sh  run_with_hook.sh  usb_capture_verify.sh  validate_models.py  verify_formula.py  (+5 more)
compat_libs/: libIlmImfUtil-2_5.so.25.0.6
docs/: ARCHITECTURE.md  FPPN_EXTRACTION_100_PERCENT.md  INVESTIGATION_SUMMARY_2026-01-06.md  SDK_RAW_COMPARISON_RESULTS.md
gst-plugins/gstcubeeye/: CMakeLists.txt  gstcubeeye_depth.cpp  gstcubeeye_depth.h  gstcubeeye_src.cpp  gstcubeeye_src.h  gstcubeeyesrc.cpp  gstcubeeyesrc.h  plugin.cpp
scripts/: dump_fppn.gdb  dump_sdk_fppn.py  dump_sdk_memory.py  extract_fppn.py  extract_fppn_complete.py  gdb_trace_fppn.py  run_with_hook.sh  sdk_fppn_comparison_test.py  trace_init.sh  trace_sdk.sh  verify_fppn_extraction.py
src/: benchmark_capture.cpp  benchmark_raw_capture.cpp  cal_scan.c  cal_test.c  calibration_dump.c  calibration_interceptor.c  cubeeye_depth.cpp  cubeeye_depth.h  cubeeye_depth_cuda.cu  cubeeye_depth_cuda.h  cubeeye_device.cpp  cubeeye_device.h  cubeeye_standalone_capture.cpp  depth_processor.cpp  depth_processor.h  frame_analyzer.cpp  libusb_capture.c  probe_xu.c  reg_access.c  sdk_capture.cpp  set_mode.c  simple_v4l2_hook.c  test_cubeeye_depth.cpp  test_cubeeye_depth_cuda.cpp  test_depth_processor.cpp  usb_interceptor.c  v4l2_capture.cpp  v4l2_hook.c  v4l2_interceptor.c  visualize_comparison.cpp
tools/: cubeeye.cpp  cubeeye_list_devices.cpp
